replace loops with streams and lambdas